feat: add Afternoon-M theme. Color fixes for Midnight-M.

--- a/extension.toml
+++ b/extension.toml
@@ -1,9 +1,9 @@
 id = "nightfox-m"
 name = "Night-M"
-version = "0.1.0"
+version = "0.2.0"
 schema_version = 1
 authors = [
     "Mladen Popadić <mladen.popadic.4@gmail.com>",
 ]
-description = "Mladen's custom night themes"
+description = "Mladen's custom themes"
 repository = "https://github.com/mpopadic/nightfox_m-zed"
